# ezrpa2

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  WINDOWS_SETUP.md  build_executable.bat  demo_application.py  demo_core.py  demo_domain.py  demo_infrastructure.py  demo_presentation.py  main.py  outline2.md  pyproject.toml  pytest.ini  run_ezrpa.bat  run_quick_test.py  setup.py  setup_environment.bat  test_pyautogui_keys.py  test_system_integration.py  test_typing_fix.py
.claude/: settings.local.json
recordings/: recording_20250618_234950.json  recording_20250618_235132.json  recording_20250618_235225.json  recording_20250618_235302.json  recording_20250618_235618.json  recording_20250618_235800.json  recording_20250619_000250.json  recording_20250619_000329.json  recording_20250619_000710.json  recording_20250619_055223.json  recording_20250619_060204.json  recording_20250619_083125.json  recording_20250619_085921.json  recording_20250619_151118.json  recording_20250619_151423.json  recording_20250619_155629.json
requirements/: base.txt  development.txt  test.txt
src/: __init__.py  rpa_core.py
src/application/: __init__.py
src/application/dto/: __init__.py  playback_dto.py  recording_dto.py  schedule_dto.py
src/application/handlers/: __init__.py  playback_event_handler.py  recording_event_handler.py  schedule_event_handler.py
src/application/services/: __init__.py  playback_application_service.py  recording_application_service.py  schedule_application_service.py
src/application/use_cases/: __init__.py  playback_use_cases.py  recording_use_cases.py  schedule_use_cases.py
src/core/: __init__.py  container.py  event_bus.py  result.py  threading.py
src/domain/: __init__.py  value_objects.py
src/domain/entities/: action.py  custom_shortcut_command.py  recording.py  schedule.py  shortcut_settings.py
src/domain/repositories/: recording_repository.py  schedule_repository.py  settings_repository.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  keyboard_adapter.py  mouse_adapter.py
src/infrastructure/repositories/: __init__.py  sqlite_recording_repository.py  sqlite_schedule_repository.py  sqlite_settings_repository.py
src/infrastructure/services/: __init__.py  encryption_service.py  file_service.py  global_hotkey_service.py  windows_api_service.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py
src/presentation/gui/: __init__.py
src/presentation/gui/components/: __init__.py
src/presentation/gui/viewmodels/: __init__.py  base_viewmodel.py  main_viewmodel.py  recording_viewmodel.py  settings_viewmodel.py
src/presentation/gui/views/: __init__.py  main_window.py  settings_window.py
src/shared/: constants.py
tests/: conftest.py  factories.py  test_container.py  test_core_integration.py
tests/e2e/: test_application_e2e.py
tests/integration/: test_recording_workflow.py
tests/unit/application/handlers/: test_playback_event_handler.py  test_recording_event_handler.py  test_schedule_event_handler.py
tests/unit/application/services/: test_playback_application_service.py  test_recording_application_service.py  test_schedule_application_service.py
tests/unit/domain/: test_value_objects.py
tests/unit/domain/entities/: test_action.py  test_recording.py  test_schedule.py
tests/unit/infrastructure/adapters/: test_keyboard_adapter.py  test_mouse_adapter.py
tests/unit/infrastructure/repositories/: test_sqlite_recording_repository.py
tests/unit/infrastructure/services/: test_encryption_service.py
